--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -102,11 +102,12 @@
                 
                 <!-- Dark Mode Toggle & Back Button -->
                 <div class="flex items-center gap-4">
-                    <button id="theme-toggle" type="button" class="p-2 text-gray-800 dark:text-gray-100 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" aria-label="Toggle dark mode">
-                        <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Desktop Dark Mode Toggle (hidden on mobile) -->
+                    <button id="theme-toggle-desktop" type="button" class="hidden md:block p-2 text-gray-800 dark:text-gray-100 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" aria-label="Toggle dark mode">
+                        <svg class="theme-toggle-dark-icon hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                             <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
                         </svg>
-                        <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="theme-toggle-light-icon hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                             <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path>
                         </svg>
                     </button>
@@ -358,6 +359,18 @@
     <!-- Footer -->
     <footer class="bg-gray-900 dark:bg-gray-950 text-gray-300 dark:text-gray-400 py-8">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Mobile Dark Mode Toggle (visible only on mobile) -->
+            <div class="flex justify-center mb-4 md:hidden">
+                <button id="theme-toggle-mobile" type="button" class="p-2 text-gray-300 hover:text-white hover:bg-gray-800 rounded-lg transition-colors" aria-label="Toggle dark mode">
+                    <svg class="theme-toggle-dark-icon hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+                    </svg>
+                    <svg class="theme-toggle-light-icon hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path>
+                    </svg>
+                </button>
+            </div>
+            
             <div class="text-center text-sm text-gray-500 dark:text-gray-500">
                 <p>&copy; 2025 JustCloud.pl. Wszystkie prawa zastrzeżone.</p>
                 <p class="mt-2">
@@ -501,9 +514,10 @@
     <!-- Dark Mode Script -->
     <script>
         (function() {
-            const themeToggleBtn = document.getElementById('theme-toggle');
-            const darkIcon = document.getElementById('theme-toggle-dark-icon');
-            const lightIcon = document.getElementById('theme-toggle-light-icon');
+            const themeToggleBtnDesktop = document.getElementById('theme-toggle-desktop');
+            const themeToggleBtnMobile = document.getElementById('theme-toggle-mobile');
+            const darkIcons = document.querySelectorAll('.theme-toggle-dark-icon');
+            const lightIcons = document.querySelectorAll('.theme-toggle-light-icon');
             const html = document.documentElement;
 
             // Check for saved theme preference or default to system preference
@@ -518,12 +532,12 @@
             const setTheme = (theme) => {
                 if (theme === 'dark') {
                     html.classList.add('dark');
-                    darkIcon?.classList.remove('hidden');
-                    lightIcon?.classList.add('hidden');
+                    darkIcons.forEach(icon => icon?.classList.remove('hidden'));
+                    lightIcons.forEach(icon => icon?.classList.add('hidden'));
                 } else {
                     html.classList.remove('dark');
-                    darkIcon?.classList.add('hidden');
-                    lightIcon?.classList.remove('hidden');
+                    darkIcons.forEach(icon => icon?.classList.add('hidden'));
+                    lightIcons.forEach(icon => icon?.classList.remove('hidden'));
                 }
                 localStorage.setItem('theme', theme);
             };
@@ -531,11 +545,15 @@
             // Initialize theme
             setTheme(getThemePreference());
 
-            // Toggle theme
-            themeToggleBtn?.addEventListener('click', () => {
+            // Toggle theme function
+            const toggleTheme = () => {
                 const currentTheme = html.classList.contains('dark') ? 'dark' : 'light';
                 setTheme(currentTheme === 'dark' ? 'light' : 'dark');
-            });
+            };
+
+            // Add event listeners to both buttons
+            themeToggleBtnDesktop?.addEventListener('click', toggleTheme);
+            themeToggleBtnMobile?.addEventListener('click', toggleTheme);
         })();
     </script>
 </body>
