--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                             Inne moje prezentacje
                         </a>
                         
-                        <a href="videos.html" 
+                        <a href="wideo-i-prezentacje.html" 
                            class="inline-flex items-center gap-2 px-8 py-4 bg-white dark:bg-gray-800 hover:bg-gray-100 dark:hover:bg-gray-700 text-gray-900 dark:text-white font-semibold rounded-lg border-2 border-gray-300 dark:border-gray-600 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
                             <svg class="w-5 h-5 text-red-600" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
