--- a/wideo-i-prezentacje.html
+++ b/wideo-i-prezentacje.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Wideo i Prezentacje - JustCloud.pl">
     <meta name="description" content="Kolekcja moich wystąpień, prezentacji i nagrań wideo na temat Microsoft Azure, DevOps i chmury obliczeniowej.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://justcloud.pl/videos.html">
+    <link rel="canonical" href="https://justcloud.pl/wideo-i-prezentacje.html">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
@@ -92,9 +92,18 @@
                 <h1 class="font-space-mono text-4xl sm:text-5xl lg:text-6xl font-bold mb-6 text-gray-900 dark:text-white">
                     Wideo i Prezentacje
                 </h1>
-                <p class="text-lg text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
+                <p class="text-lg text-gray-600 dark:text-gray-300 max-w-2xl mx-auto mb-8">
                     Zbiór moich wystąpień z konferencji, meetupów oraz nagrań edukacyjnych.
                 </p>
+                <a href="https://github.com/RogalaPiotr/Presentations" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="inline-flex items-center gap-2 px-8 py-4 bg-white dark:bg-gray-800 hover:bg-gray-100 dark:hover:bg-gray-700 text-gray-900 dark:text-white font-semibold rounded-lg border-2 border-gray-300 dark:border-gray-600 hover:border-jc-blue-500 dark:hover:border-jc-blue-400 shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                    </svg>
+                    Pliki prezentacji na GitHub
+                </a>
             </div>
 
             <!-- Videos organized by year (newest first) -->
@@ -159,7 +168,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    JSON and Azure - Code Europe Autumn 2017
+                                    Optymalizacja projektów w Azure - Piotr Rogala
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -202,7 +211,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    Optymalizacja projektów w Azure - Piotr Rogala
+                                    Produkcyjna Landing Zona w dwa tygodnie? - 4Developers Wrocław 2024
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -234,7 +243,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    Z Azure DevOps do GitHub Actions z użyciem ChatGPT
+                                    Infrastructure as Code best practices in the Cloud
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -277,7 +286,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    Infrastructure as Code best practices in the Cloud
+                                    Z Azure DevOps do GitHub Actions z użyciem ChatGPT
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -342,7 +351,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    Azure lessons learned
+                                    [#399] Azure lessons learned - Patoarchitekci
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -385,7 +394,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    [#399] Azure lessons learned
+                                    Azure lessons learned - WRO Azure Group
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -535,7 +544,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    Produkcyjna Landing Zona w dwa tygodnie? - 4Developers Wrocław 2024
+                                    Azuronet - Azure Podcast #1: O DevOps z Piotrem Rogalą
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
@@ -621,7 +630,7 @@
                             </div>
                             <div class="p-6 flex-1 flex flex-col">
                                 <h3 class="font-semibold text-lg mb-3 text-gray-900 dark:text-white line-clamp-2 group-hover:text-jc-blue-600 dark:group-hover:text-jc-blue-400 transition-colors">
-                                    Azuronet - Azure Podcast #1: O DevOps z Piotrem Rogalą
+                                    JSON and Azure - Code Europe Autumn 2017
                                 </h3>
                                 <div
                                     class="mt-auto inline-flex items-center text-jc-blue-600 dark:text-jc-blue-400 group-hover:text-jc-blue-700 dark:group-hover:text-jc-blue-300 font-semibold transition-colors">
